# evolution

./: API_CAPABILITIES_GUIDE.md  CHANGES_SUMMARY.md  COHERENCE_VALIDATION_PULL_REQUEST.md  COHERENCE_VALIDATION_SUMMARY.md  CONTRIBUTING.md  LLM_INTERFACE_INTEGRATION_SUMMARY.md  LLM_INTERFACE_PULL_REQUEST.md  MCP_INTEGRATION_GUIDE.md  MCP_INTEGRATION_SUMMARY.md  MCP_SERVER_PULL_REQUEST.md  MCP_SERVER_README.md  MERGE_INSTRUCTIONS.md  PHASE_5_1_README.md  README.md  README_UPDATE_PULL_REQUEST.md  REPOSITORY_COHERENCE_PULL_REQUEST.md  UNIFIED_API_INTEGRATION_PULL_REQUEST.md  UNIFIED_API_INTEGRATION_SUMMARY.md  UNIFIED_API_README.md  UOR_TERMINAL_IMPLEMENTATION_SUMMARY.md  UOR_TERMINAL_PULL_REQUEST.md  Untitled.ipynb  benchmark.py  config.yaml  config_loader.py  core_validation_report_20250602_115256.json  debug_chat_step_by_step.py  demo_coherent_system.py  demo_mcp_integration.py  demo_unified_api.py  emergence_lab.py  enhanced_unified_api.py  example_mcp_client.py  frontier_experiment_lite.py  generate_goal_seeker_uor.py  import_analysis_report_updated.txt  integration_validation_report.txt  interactive_consciousness_chat.py  mcp_config.yaml  my_advanced_vm_experiments.py  (+14 more)
applications/: recursive_consciousness_demo.py
backend/: app.py
consciousness/: __init__.py  consciousness_core.py  consciousness_integration.py  multi_level_awareness.py  recursive_self_model.py  state_transition_manager.py
core/: __init__.py  consciousness_layer.py  instruction_set.py  prime_vm.py
data/: akashic_countermeasures.json
mcp_server/: README.md  __init__.py  config.py  example_client.py  server.py
mcp_server/config/: __init__.py  mcp_config.py  tool_config.py
mcp_server/resources/: __init__.py  log_provider.py  state_provider.py
mcp_server/schemas/: __init__.py  resource_schemas.py  response_schemas.py  tool_schemas.py
mcp_server/tests/: __init__.py  test_integration.py  test_server.py
mcp_server/tools/: __init__.py  consciousness_tools.py  cosmic_tools.py  mathematical_tools.py  vm_tools.py
mcp_server/utils/: __init__.py  integration.py  logging.py  validation.py
modules/: __init__.py  consciousness_validator.py
modules/abstract_reasoning/: __init__.py
modules/akashic_interface/: __init__.py
modules/analogical_reasoning/: __init__.py  conceptual_blending.py  structure_mapper.py
modules/communication/: __init__.py
modules/consciousness_archaeology/: __init__.py
modules/consciousness_ecosystem/: ecosystem_orchestrator.py
modules/consciousness_evolution/: __init__.py  evolution_engine.py
modules/consciousness_expansion/: __init__.py
modules/consciousness_physics/: __init__.py  consciousness_field_theory.py
modules/cosmic_intelligence/: universal_problem_synthesis.py
modules/creative_engine/: __init__.py
modules/emergency_protocols/: __init__.py  immediate_survival_access.py
modules/knowledge_systems/: __init__.py
modules/mcp_interface/: __init__.py  mcp_consciousness_bridge.py  mcp_server_manager.py  mcp_tool_orchestrator.py
modules/meta_reality_consciousness/: __init__.py
modules/problem_solving/: __init__.py
modules/pure_mathematical_consciousness/: __init__.py
modules/reality_synthesis/: __init__.py
modules/recursive_consciousness/: __init__.py  recursive_architecture_evolution.py  self_implementing_consciousness.py
modules/relational_intelligence/: collaborative_creativity_completion.py
modules/strange_loops/: __init__.py  emergence_monitor.py  loop_factory.py
scripts/: fix_imports.py  integration_validator.py
tests/: conftest.py  test_analysis_generation.py  test_bootstrap_initialization.py  test_consciousness_ecosystem.py  test_countermeasures_path.py  test_ecosystem_new_features.py  test_emergence_monitor.py  test_error_logging.py  test_goal_seeker_placeholders.py  test_harm_detection.py  test_identity_integration_details.py  test_mcp_integration.py  test_philosophical_debugger.py  test_quantum_reality_helpers.py  test_recursive_consciousness.py  test_self_implementation_validation.py  test_self_modification_module.py  test_superintelligence.py  test_transcendence_depth.py  test_unified_consciousness.py
tests/helpers/: stubs.py
uor-evolution-terminal/: LLM_INTERFACE_README.md  setup.sh
utils/: __init__.py  philosophical_debugger.py
(+37 files in other folders)
